public class Main {

    public static void main(String[] args) {
        StartMenu startMenu = new StartMenu();
        NetflixMenu netflixMenu = new NetflixMenu();

        startMenu.run();

    }
}
