public interface Media {

    void resumePlay();

    void stopPlay();

    void pausePlay();

    void play();
}
