@startuml
'https://plantuml.com/class-diagram
 skinparam linetype ortho




class Main{
+ static void main(String[] args)
}

class StartMenu {
- boolean isLoggedIn
+ loginAndSignUp()
+ void userInterface()
+ void run()

}

class User {
- String selectedMovies
- String selectedSeries
- ArrayList<Movie> watchedMovies
- ArrayList<Series> watchedSeries
- LinkedList<String> saveList
+ void writerSaveList(String saveList)
+ void writerWatchLaterAndWatchList(String watchLater)
}

class FileIO {
- int counter
- String userDataFile
+ void loadMoviesFromList()
+ void loadSeriesFromList()
+ void createAccount()
+ boolean getAccountInfo()
+ boolean doesUserExist()
}

interface Media {
resumePlay();
stopPlay();
pausePlay();
play();
}

abstract MediaData{
- String name
- String genre
- int releaseYear
- float rating
# int ID
+ String getName()
+ String getGenre()
+ int getReleaseYear()
+ float getRating()
+ int getID()

}

class NetflixMenu {
- int highNumber = 5
- int lowNumber
- ArrayList<Genre> genreList
- ArrayList<Movie> movieList
- ArrayList<Series> seriesList
- Scanner scan
+ void initializeGenreList()
+ void displayMovieList()
+ void displaySeriesList()
+ void displayGenreList()
+ void displaySearchMedia(TreeSet<MediaData> searchMedia)
+ void searchMedia(String keyword)
+ void selectMedia
+ ArrayList<String> getMoviesList()
+ ArrayList<String> getSeriesList()
+ Movie selectMovie(String userChoice)
+ Series selectSeries(String userChoice)
}

class Movie {
+ String toString()
+ int compareTo(MediaData o)
+ void movieOption()
}

class Genre {
- Scanner scan
+ String mediaWithThisGenre()
+ void searchGenre()
}

class Series {
- int currentEpisode
- int currentSeason
- int seasonSize
- ArrayList<Season> seasonEpisode
+ void nextEpisode
+ void seasonInitializer()
+ void selectEpisode()
+ void seriesOptions()
+ Season selectSeason()
+ String toString()
+ int compareTo(MediaData o)
}

class Season {
- String seasonNumber
- ArrayList<Episode> episodes
+ String toString()
}

class Episode {
- int episodeNumber
+ String toString()
}

class TextUI {
- Scanner scanner
+ void displayMsg()
+ void displayMovie(String movieName)
+ void displaySeries(String seriesName, String season, String episode)
+ String greetingMessage()
+ String messageGetUserEmail()
+ String messageGetUserPassword()
+ String messageGetRegisterEmail()
+ String messageGetRegisterPassowrd()
+ void askForGenre()
+ String greetingFromMenu()
+ String userInput()
}

Main -- StartMenu
StartMenu *--- User
TextUI *-up- StartMenu
User *- NetflixMenu
NetflixMenu -- Movie
NetflixMenu -- Series
NetflixMenu --- Genre
Genre --> Movie
Genre --> Series
Series *-- Season
Season *-- Episode
Media *-- Movie
Media *-- Series
FileIO *-- User
MediaData *-- Movie
MediaData *-- Series

@enduml